traefik-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: docker.io/traefik:2.11
          args:
            - "--providers.kubernetescrd"
            - "--providers.kubernetesingress"
            - "--configfile=/etc/traefik/traefik.yml"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
          volumeMounts:
            - name: config
              mountPath: /etc/traefik
            - name: acme
              mountPath: /acme
      volumes:
        - name: config
          configMap:
            name: traefik-config
        - name: acme
          persistentVolumeClaim:
            claimName: traefik-acme
