traefik-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: NodePort
  ports:
    - name: web
      port: 80
      nodePort: 30080
      targetPort: 80
    - name: websecure
      port: 443
      nodePort: 30443
      targetPort: 443
  selector:
    app: traefik
